# IronSBE

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  code_coverage.yml  lint.yml  semver.yml  tests.yml
Docker/: Dockerfile  docker-compose.yml
docs/: transport-backends.md
ironsbe/: Cargo.toml
ironsbe-bench/: Cargo.toml
ironsbe-bench/benches/: encoding.rs  performance.rs  throughput.rs  transport_round_trip.rs
ironsbe-bench/src/: encoding.rs  latency.rs  lib.rs  throughput.rs
ironsbe-channel/: Cargo.toml
ironsbe-channel/src/: async_bridge.rs  broadcast.rs  lib.rs  mpsc.rs  spsc.rs
ironsbe-client/: Cargo.toml
ironsbe-client/src/: builder.rs  error.rs  lib.rs  local_builder.rs  reconnect.rs  session.rs
ironsbe-codegen/: Cargo.toml
ironsbe-codegen/examples/: group_roundtrip_codegen.rs  shared_group_codegen.rs
ironsbe-codegen/src/: error.rs  generator.rs  lib.rs
ironsbe-codegen/src/rust/: enums.rs  groups.rs  messages.rs  mod.rs  types.rs
ironsbe-core/: Cargo.toml
ironsbe-core/src/: buffer.rs  decoder.rs  encoder.rs  error.rs  header.rs  lib.rs  types.rs
ironsbe-derive/: Cargo.toml
ironsbe-derive/src/: lib.rs
ironsbe-marketdata/: Cargo.toml
ironsbe-marketdata/src/: arbitration.rs  book.rs  handler.rs  instruments.rs  lib.rs  recovery.rs
ironsbe-schema/: Cargo.toml
ironsbe-schema/src/: error.rs  ir.rs  lib.rs  messages.rs  parser.rs  types.rs  validation.rs
ironsbe-server/: CHANGELOG.md  Cargo.toml
ironsbe-server/src/: builder.rs  dispatcher.rs  error.rs  handler.rs  lib.rs  local_builder.rs  session.rs
ironsbe-server/tests/: local_server_uring.rs  no_enter_guard.rs  server_session_cleanup.rs
ironsbe-transport/: Cargo.toml
ironsbe-transport-dpdk/: Cargo.toml  build.rs
ironsbe-transport-dpdk/src/: dpdk_wrapper.h  eal.rs  ffi.rs  lib.rs  port.rs  shim.c  transport.rs
ironsbe-transport-rdma/: Cargo.toml  build.rs
ironsbe-transport-rdma/src/: addr.rs  connection.rs  ffi.rs  lib.rs  listener.rs  rdma_wrapper.h  shim.c  transport.rs
ironsbe-transport-rdma/tests/: loopback.rs
ironsbe-transport/src/: error.rs  lib.rs  traits.rs
ironsbe-transport/src/ipc/: mod.rs  ringbuffer.rs  shm.rs
ironsbe-transport/src/tcp/: client.rs  framing.rs  mod.rs  server.rs
ironsbe-transport/src/tcp_uring/: mod.rs
ironsbe-transport/src/udp/: mod.rs  multicast.rs  unicast.rs
ironsbe-transport/src/xdp/: datapath.rs  frames.rs  mod.rs  transport.rs
ironsbe-transport/src/xdp/stack/: mod.rs  tcp.rs  udp.rs
ironsbe-transport/tests/: transport_config.rs  uring_transport.rs  xdp_end_to_end.rs
ironsbe/examples/: benchmark_report.rs  client.rs  server.rs  uring_client.rs  uring_server.rs  xdp_client.rs  xdp_server.rs
ironsbe/src/: lib.rs  prelude.rs
ironsbe/tests/: integration_dispatcher.rs  integration_multi_client.rs  integration_reconnect.rs  integration_round_trip.rs  integration_session_lifecycle.rs  integration_shutdown.rs
ironsbe/tests/common/: mod.rs
