[package]
name = "ironsbe-bench"
description = "Benchmarking suite for IronSBE"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["benchmark", "performance", "sbe"]
categories = ["development-tools::profiling"]

[features]
default = []
# Linux-only io_uring backend.  Forwards to the matching feature in
# ironsbe-transport so the transport_round_trip bench can include the
# uring path.
tcp-uring = ["ironsbe-transport/tcp-uring"]

[dependencies]
ironsbe-core = { workspace = true }
ironsbe-channel = { workspace = true }
ironsbe-transport = { workspace = true, features = ["tcp-tokio"] }
criterion = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "transport_round_trip"
harness = false
