[package]
name = "ironsbe-core"
description = "Core types and traits for IronSBE - zero-copy SBE encoding/decoding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sbe", "binary-encoding", "zero-copy", "low-latency"]
categories = ["encoding", "no-std"]

[dependencies]
thiserror = { workspace = true }
crossbeam-queue = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
