[package]
name = "ironsbe-schema"
description = "SBE XML schema parser and type definitions for IronSBE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sbe", "schema", "xml", "parser"]
categories = ["encoding", "parsing"]

[dependencies]
ironsbe-core = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
