[package]
name = "ironsbe-server"
description = "Server-side engine for IronSBE messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["server", "sbe", "messaging", "low-latency"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["tcp-tokio"]
tcp-tokio = ["ironsbe-transport/tcp-tokio"]
# Linux-only io_uring backend.  Brings in the LocalServer integration
# tests and gates them on Linux + the matching transport feature.
tcp-uring = ["ironsbe-transport/tcp-uring"]
xdp = ["ironsbe-transport/xdp"]

[dependencies]
ironsbe-core = { workspace = true }
ironsbe-channel = { workspace = true }
ironsbe-transport = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Path-only (no version) on purpose: `ironsbe-client` is published *after*
# `ironsbe-server`, so a versioned edge would force the not-yet-published
# client during `cargo publish`. Cargo strips version-less dev-dependencies
# from the packaged manifest, breaking the publish-order cycle while keeping
# the dep available for local `cargo test`.
ironsbe-client = { path = "../ironsbe-client" }
ironsbe-core = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }
