[package]
name = "ironsbe-transport"
description = "Network transport layer for IronSBE - TCP, UDP, and IPC"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["transport", "tcp", "udp", "multicast", "ipc"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["tcp-tokio"]
tcp-tokio = ["dep:tokio-util", "dep:futures", "dep:socket2"]
# Linux-only io_uring backend.  Enabling this on a non-Linux platform compiles
# the trait-level glue but the backend module is gated to `target_os = "linux"`.
tcp-uring = ["dep:tokio-uring"]
# Pure-Rust pieces of the AF_XDP backend (frame parsers + smoltcp/UDP
# stacks).  Compiles everywhere and is fully unit-tested without root or
# hardware.  The actual `xsk-rs` datapath layer that wires this up to a
# real NIC queue is landed in a follow-up PR alongside the server
# integration and benchmarks (it requires hardware to validate).
xdp-stacks = ["dep:smoltcp", "dep:etherparse"]
# Full AF_XDP backend.  Includes the pure-Rust stacks above plus the
# `xsk-rs`-based datapath that binds to a real NIC queue.  Linux-only
# (xsk-rs is target-conditional in the deps below).
xdp = ["xdp-stacks", "dep:xsk-rs"]

[dependencies]
ironsbe-core = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
memmap2 = { workspace = true }

[dependencies.smoltcp]
workspace = true
optional = true

[dependencies.etherparse]
workspace = true
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }
xsk-rs = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
socket2 = { workspace = true }
