[package]
name = "ironsbe"
description = "High-performance SBE (Simple Binary Encoding) server/client for Rust"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sbe", "binary-encoding", "trading", "low-latency", "finance"]
categories = ["encoding", "network-programming", "finance"]
readme = "../README.md"

[dependencies]
ironsbe-core = { workspace = true }
ironsbe-schema = { workspace = true }
ironsbe-codegen = { workspace = true }
ironsbe-channel = { workspace = true }
ironsbe-transport = { workspace = true }
ironsbe-server = { workspace = true }
ironsbe-client = { workspace = true }
ironsbe-marketdata = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "benchmark_report"
path = "examples/benchmark_report.rs"

[[example]]
name = "uring_server"
path = "examples/uring_server.rs"

[[example]]
name = "uring_client"
path = "examples/uring_client.rs"

[features]
default = []
# Linux-only io_uring backend.  Forwards to the matching feature in
# ironsbe-server / ironsbe-client / ironsbe-transport so the
# uring_server / uring_client examples can opt in.
tcp-uring = [
    "ironsbe-server/tcp-uring",
    "ironsbe-client/tcp-uring",
    "ironsbe-transport/tcp-uring",
]
xdp = [
    "ironsbe-server/xdp",
    "ironsbe-client/xdp",
    "ironsbe-transport/xdp",
]

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-uring = { workspace = true }
